# solution-lab

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
agents/: __init__.py  architect.py  base.py  critic.py  judge.py  llm_client.py  problem_framer.py  researcher.py
auth/: __init__.py  api_key.py
docs/: REVIEW_NOTES.md  architecture.md  roadmap.md
orchestrator/: __init__.py  session_runner.py
schemas/: __init__.py  models.py
storage/: __init__.py  session_store.py
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_orchestrator.py  test_schemas.py  test_session_runner.py  test_storage.py
tools/: __init__.py  firecrawl_client.py  research.py
